--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "1.0.14"
   },
   "scripts": {
+    "dev": "node server/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
