--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.3.2",
     "express": "^4.16.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
