--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "src",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "react": "^16.0.0",
