--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-session": "^1.3.2",
     "express": "^4.16.1",
+    "mongoose": "^4.12.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
   },
