--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "dev": "node server/server.js",
