--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^1.3.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.1",
+    "express-session": "^1.15.6",
     "mongoose": "^4.12.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
